# bea_dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile.toml  tailwind.config.js
public/: tailwind.css
src/: error.rs  lib.rs  main.rs  query.rs
src/components/: code_select.rs  dark_mode.rs  dropdown.rs  fips_select.rs  home_tile.rs  load.rs  menu.rs  mod.rs  theme.rs  year_select.rs
src/pages/: home.rs  loading.rs  mod.rs  not_found.rs  route.rs
